istio-ingress/istio-ingress-tmp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-custom1
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 15004
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: custom1
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gateway-custom1
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: prom-grafana.prom.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-custom2
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 15005
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: custom2
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gateway-custom2
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9093
        host: prom-prometheus-operator-alertmanager.prom.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-custom3
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 15006
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: custom3
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gateway-custom3
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9090
        host: prom-prometheus-operator-prometheus.prom.svc.cluster.local
---
